--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html><head>  <meta charset="UTF-8">
+	<!--include Handlebars from CDN-->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.2/handlebars.min.js"></script>
         <title>students</title>
 </head>
 <body style='margin-left: 30px;'>
