--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	
 	<!--include Handlebars from CDN-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.2/handlebars.min.js"></script>
-	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>students</title>
 </head>
 <body style='margin-left: 30px;'>
@@ -31,9 +31,9 @@
     
 <script>
 	
-	function getData(selected_major) {      
+    function getData(selected_major) {      
       var request = new XMLHttpRequest();
-      request.open('GET', 'cit5students.json');      
+      request.open('GET', 'cit5students.json');
  
       request.onload = function() {                     
          var data = JSON.parse(request.responseText);    
