--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <h1>Select A Major</h1>
 
 
-    <button type='button' class="btn" onClick="getData('cit')">CIT Majors</button>
-    <button type='button' class="btn" onClick="getData('bus')">Business Majors</button>
+    <button type='button' class="btn" onClick="getData('CIT')">CIT Majors</button>
+    <button type='button' class="btn" onClick="getData('BUS')">Business Majors</button>
 
     <p>We filter our dataset by major</p>
 
