--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 
     <!--include Handlebars from CDN-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.2/handlebars.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>students</title>
 </head>
 
@@ -23,7 +22,7 @@
 
     <script type="text/x-handlebars-template" id="tableTemplate">
     <table cellspacing='12'>
-        <tr><th>Name</th><th>Major</th><th>Midterm</th><th>final</th></tr>
+        <tr><th>Name</th><th>Major</th><th>Midterm</th><th>Final</th></tr>
             {{#each rows}}
                 <tr>
                     <td>{{name}}</td><td>{{major}}</td><td>{{midterm}}</td><td>{{final}}</td>
