--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="UTF-8">
-
     <!--include Handlebars from CDN-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.1.2/handlebars.min.js"></script>
+    
     <title>students</title>
 </head>
 
@@ -16,7 +16,7 @@
     <button type='button' class="btn" onClick="getData('CIT')">CIT Majors</button>
     <button type='button' class="btn" onClick="getData('BUS')">Business Majors</button>
 
-    <p>We filter our dataset by major</p>
+    <h3>We filter our dataset by major</h3>
 
     <div id="result"></div>
 
