--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.1/angular.min.js"></script> 
 </head>
 
-<body ng-app = "carsApp">
+<body ng-app = "studentsApp">
 
 
 <div class="container">
@@ -17,10 +17,10 @@
     <div>
          <ul class="nav navbar-nav">
              <li class="active"><a href="index.html">Welcome</a></li>
-             <li><a href="all_cars.html">All the Cars</a></li>
+             <li><a href="gpa.html">Students GPA</a></li>
          </ul>
     </div>
-    </nav>    <!-- end nav-bar -->
+    </nav>
 
     <div ng-controller = "allCtrl">
 
@@ -28,29 +28,29 @@
        <p><input type='text' ng-model='search_text' > Enter Search text</p>
        <table class="table table-bordered table-striped">
            <tr>
-             <th>id</th> <th>year</th> <th>make</th> <th>model</th> <th>miles</th> <th>price</th> <th>dealer</th>
+             <th>id</th> <th>first name</th> <th>last name</th> <th>credit hours</th> <th>gpa points</th> <th>major</th>
            </tr>
   
-           <tr ng-repeat = "car in cars | filter:search_text">  <!-- filter by search textbox value -->
-               <td>{{car.id}}</td>
-               <td>{{car.year}}</td>
-               <td>{{car.make}}</td>
-               <td>{{car.model}}</td>
-               <td>{{car.miles}}</td>
-               <td>{{car.price | currency}}</td>
-               <td>{{car.dealer}}</td>
+           <tr ng-repeat = "Students in Students | filter:search_text">
+               <td>{{students.id}}</td>
+               <td>{{students.year}}</td>
+               <td>{{students.make}}</td>
+               <td>{{students.model}}</td>
+               <td>{{students.miles}}</td>
+               <td>{{students.price | currency}}</td>
+               <td>{{students.dealer}}</td>
            </tr>
        </table>
-     </div>   <!-- end carsApp -->
-  </div>   <!-- end class= 'container' -->
+     </div>
+  </div>
 
   <script>
-      var app = angular.module('carsApp', []);
+      var app = angular.module('studentsApp', []);
       app.controller('allCtrl', function($scope, $http) {
   
-          $http.get("cars.json")          // get all the car data
+          $http.get("students.json")
           .then(function (response) {
-               $scope.cars = response.data;    // put the data in the table
+               $scope.students = response.data;
           });
 
        });
