--- a/index.html
+++ b/index.html
@@ -33,12 +33,11 @@
   
            <tr ng-repeat = "Students in Students | filter:search_text">
                <td>{{students.id}}</td>
-               <td>{{students.year}}</td>
-               <td>{{students.make}}</td>
-               <td>{{students.model}}</td>
-               <td>{{students.miles}}</td>
-               <td>{{students.price | currency}}</td>
-               <td>{{students.dealer}}</td>
+               <td>{{students.first_name}}</td>
+               <td>{{students.last_name}}</td>
+               <td>{{students.credit_hrs}}</td>
+               <td>{{students.gpa_points}}</td>
+               <td>{{students.major}}</td>
            </tr>
        </table>
      </div>
