--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <div ng-controller = "allCtrl">
 
-    <h2>All Cars</h2>
+    <h2>All Students</h2>
        <p><input type='text' ng-model='search_text' > Enter Search text</p>
        <table class="table table-bordered table-striped">
            <tr>
