--- a/gpa.html
+++ b/gpa.html
@@ -16,15 +16,15 @@
     </div>
     <div>
          <ul class="nav navbar-nav">
-             <li class="active"><a href="index.html">Welcome</a></li>
-             <li><a href="gpa.html">Students GPA</a></li>
+             <li class="active"><a href="index.html">All Advisees</a></li>
+             <li><a href="gpa.html">Grade Point Averages</a></li>
          </ul>
     </div>
     </nav>
 
     <div ng-controller = "allCtrl">
 
-    <h2>All Students</h2>
+    <h2>Advisees</h2>
        <p><input type='text' ng-model='search_text' > Enter Search text</p>
        <table class="table table-bordered table-striped">
            <tr>
