--- a/gpa.html
+++ b/gpa.html
@@ -28,7 +28,7 @@
        <p><input type='text' ng-model='search_text' > Enter Search text</p>
        <table class="table table-bordered table-striped">
            <tr>
-             <th>id</th> <th>first name</th> <th>last name</th> <th>credit hours</th> <th>gpa points</th> <th>major</th>
+             <th>sid</th> <th>first name</th> <th>last name</th> <th>credit hours</th> <th>gpa points</th> <th>major</th>
            </tr>
   
            <tr ng-repeat = "students in students | filter:search_text">
