--- a/gpa.html
+++ b/gpa.html
@@ -36,7 +36,7 @@
                <td>{{students.first_name}}</td>
                <td>{{students.last_name}}</td>
                <td>{{students.gpa_points}}</td>
-               <td>{{(student.gpa_points / student.credit_hrs).toFixed(1)}}</td>
+               <td>{{(students.gpa_points / students.credit_hrs).toFixed(1)}}</td>
            </tr>
        </table>
      </div>
